[package]
name = "tokio-dtls"
version = "0.1.0"
authors = ["Gleb Pomykalov <gleb@pomykalov.ru>"]
edition = "2018"

[dependencies]
openssl = "0.10.19"
openssl-probe = "0.1.2"
tokio = "0.1.16"
futures = "0.1.25"
tokio-io = "0.1.12"
log = "0.4.6"
bytes = "0.4.11"

[dev-dependencies]
hex = "0.3"

[features]
vendored = ["openssl/vendored"]
